# ros2_robot_ws

./: .gitignore  README.md
src/fishbot_description/: CMakeLists.txt  package.xml
src/fishbot_description/launch/: display_robot.launch.py
src/fishbot_description/urdf/: first_robot.urdf
src/gazebo_bot_description/: CMakeLists.txt  package.xml
src/gazebo_bot_description/launch/: display_robot.launch.py  spawn_robot.launch.py
src/gazebo_bot_description/urdf/: gazebo_robot.urdf
