<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>fishbot_description</name>
    <version>0.0.0</version>
    <description>URDF description package for fishbot robot</description>
    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>Apache-2.0</license>

    <!-- 构建工具依赖 -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- 运行时依赖（启动这些节点需要） -->
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>urdf</exec_depend>

    <!-- （可选）测试依赖 -->
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>